# property-inference-attacks

./: .gitignore  LICENSE.md  README.md  clean.sh  config.json  env.yml  logging.ini  optimise_deepsets.py  optimise_mlp.py  run.py  setup.cfg  token
.github/workflows/: python-app.yml
config/: config.yaml
config/deepsets/: base.yaml
config/experiments/: all.yaml  all_regression.yaml  simple.yaml  test.yaml  test_multiclass.yaml  test_regression.yaml
config/generators/: base.yaml
config/models/: base.yaml
docs/: experiment.html  generator.html  index.html  model.html
pia/: __init__.py  deepsets.py  experiment.py  model_utils.py
propinfer/: __init__.py  deepsets.py  experiment.py  generator.py  model.py
src/: __init__.py  experiment.py  generator.py  model.py
src/utils/: deepsets.py  model_utils.py
tests/: __init__.py  test_deepsets.py  test_experiment.py  test_generator.py  test_model.py  test_model_utils.py
