[metadata]
name = propinfer
version = 0.0.13
author = Léo Meynent
author_email = leo.meynent@epfl.ch
description = Modular framework to run Property Inference Attacks on Machine Learning models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epfl-dlab/property-inference-attacks
project_urls =
    Tracker = https://github.com/epfl-dlab/property-inference-attacks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
license_files = LICENSE.md

[options]
packages = propinfer
python_requires = >=3.6
install_requires =
    scikit-learn
    pandas
    numpy
    hydra-core